architectureDesign/PUML/lz-network-norwayeast_Resources/resourcesJson/lz-network-norwayeast-vnet-adds-test-nsg.json
{
  "provisioningState": "Succeeded",
  "resourceGuid": "2d24d254-f0f9-4d5b-8ea9-c50058a02065",
  "defaultSecurityRules": [
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "VirtualNetwork",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "Allow inbound traffic from all VMs in VNET",
        "protocol": "*",
        "direction": "Inbound",
        "priority": 65000,
        "access": "Allow"
      },
      "name": "AllowVnetInBound",
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
      "id": "/subscriptions/0/resourceGroups/lz-network-norwayeast/providers/Microsoft.Network/networkSecurityGroups/lz-network-norwayeast-vnet-adds-test-nsg/defaultSecurityRules/AllowVnetInBound",
      "etag": "W/\"9aa530a0-1e8d-4383-a34b-128efa65af41\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "*",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "AzureLoadBalancer",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "Allow inbound traffic from azure load balancer",
        "protocol": "*",
        "direction": "Inbound",
        "priority": 65001,
        "access": "Allow"
      },
      "name": "AllowAzureLoadBalancerInBound",
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
      "id": "/subscriptions/0/resourceGroups/lz-network-norwayeast/providers/Microsoft.Network/networkSecurityGroups/lz-network-norwayeast-vnet-adds-test-nsg/defaultSecurityRules/AllowAzureLoadBalancerInBound",
      "etag": "W/\"9aa530a0-1e8d-4383-a34b-128efa65af41\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "*",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "*",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "Deny all inbound traffic",
        "protocol": "*",
        "direction": "Inbound",
        "priority": 65500,
        "access": "Deny"
      },
      "name": "DenyAllInBound",
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
      "id": "/subscriptions/0/resourceGroups/lz-network-norwayeast/providers/Microsoft.Network/networkSecurityGroups/lz-network-norwayeast-vnet-adds-test-nsg/defaultSecurityRules/DenyAllInBound",
      "etag": "W/\"9aa530a0-1e8d-4383-a34b-128efa65af41\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "VirtualNetwork",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "Allow outbound traffic from all VMs to all VMs in VNET",
        "protocol": "*",
        "direction": "Outbound",
        "priority": 65000,
        "access": "Allow"
      },
      "name": "AllowVnetOutBound",
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
      "id": "/subscriptions/0/resourceGroups/lz-network-norwayeast/providers/Microsoft.Network/networkSecurityGroups/lz-network-norwayeast-vnet-adds-test-nsg/defaultSecurityRules/AllowVnetOutBound",
      "etag": "W/\"9aa530a0-1e8d-4383-a34b-128efa65af41\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "Internet",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "*",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "Allow outbound traffic from all VMs to Internet",
        "protocol": "*",
        "direction": "Outbound",
        "priority": 65001,
        "access": "Allow"
      },
      "name": "AllowInternetOutBound",
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
      "id": "/subscriptions/0/resourceGroups/lz-network-norwayeast/providers/Microsoft.Network/networkSecurityGroups/lz-network-norwayeast-vnet-adds-test-nsg/defaultSecurityRules/AllowInternetOutBound",
      "etag": "W/\"9aa530a0-1e8d-4383-a34b-128efa65af41\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "*",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "*",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "Deny all outbound traffic",
        "protocol": "*",
        "direction": "Outbound",
        "priority": 65500,
        "access": "Deny"
      },
      "name": "DenyAllOutBound",
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
      "id": "/subscriptions/0/resourceGroups/lz-network-norwayeast/providers/Microsoft.Network/networkSecurityGroups/lz-network-norwayeast-vnet-adds-test-nsg/defaultSecurityRules/DenyAllOutBound",
      "etag": "W/\"9aa530a0-1e8d-4383-a34b-128efa65af41\""
    }
  ],
  "securityRules": [
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "*",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "AzureLoadBalancer",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "Allow RDP from bastion traffic",
        "protocol": "*",
        "direction": "Inbound",
        "priority": 4095,
        "access": "Allow"
      },
      "name": "allow-inbound-azureloadbalancer",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "id": "/subscriptions/0/resourceGroups/lz-network-norwayeast/providers/Microsoft.Network/networkSecurityGroups/lz-network-norwayeast-vnet-adds-test-nsg/securityRules/allow-inbound-azureloadbalancer",
      "etag": "W/\"9aa530a0-1e8d-4383-a34b-128efa65af41\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "*",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "*",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "Deny all inbound traffic",
        "protocol": "*",
        "direction": "Inbound",
        "priority": 4096,
        "access": "Deny"
      },
      "name": "deny-inbound-all",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "id": "/subscriptions/0/resourceGroups/lz-network-norwayeast/providers/Microsoft.Network/networkSecurityGroups/lz-network-norwayeast-vnet-adds-test-nsg/securityRules/deny-inbound-all",
      "etag": "W/\"9aa530a0-1e8d-4383-a34b-128efa65af41\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "10.104.4.160/28",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "*",
        "destinationPortRange": "53",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "Allow outbound DNS traffic to DNS Forwarder",
        "protocol": "*",
        "direction": "Outbound",
        "priority": 4093,
        "access": "Allow"
      },
      "name": "allow-outbound-dns-fwd",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "id": "/subscriptions/0/resourceGroups/lz-network-norwayeast/providers/Microsoft.Network/networkSecurityGroups/lz-network-norwayeast-vnet-adds-test-nsg/securityRules/allow-outbound-dns-fwd",
      "etag": "W/\"9aa530a0-1e8d-4383-a34b-128efa65af41\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [
          "15.133.50.64/28",
          "20.60.100.0/27",
          "20.60.100.32/27",
          "20.60.100.64/27",
          "20.60.100.96/27",
          "20.60.100.128/26",
          "20.60.100.192/28",
          "20.60.102.0/24",
          "20.60.103.0/26",
          "20.60.103.64/26",
          "20.60.103.128/26",
          "20.60.103.192/26",
          "20.60.104.0/24",
          "20.60.105.0/28",
          "20.130.74.192/26",
          "20.135.69.200/29",
          "20.139.70.0/24",
          "20.159.41.73/32",
          "20.159.42.232/29",
          "20.198.232.0/24",
          "62.92.84.128/29",
          "62.92.84.136/29",
          "62.92.84.144/28",
          "62.92.84.160/28",
          "62.121.190.30/32",
          "68.137.114.88/30",
          "68.137.114.112/30",
          "68.141.72.0/26",
          "68.141.200.0/26",
          "69.184.0.0/16",
          "69.191.198.2/32",
          "69.191.230.2/32",
          "89.250.127.128/32",
          "89.250.127.196/32",
          "91.102.25.175/32",
          "91.102.25.176/32",
          "94.127.57.64/27",
          "94.127.61.64/27",
          "94.144.1.71/32",
          "94.144.1.108/32",
          "94.144.1.115/32",
          "138.35.0.0/16",
          "139.111.95.0/27",
          "139.114.217.64/28",
          "139.116.129.0/24",
          "146.172.4.224/29",
          "146.172.4.232/29",
          "146.172.7.228/32",
          "146.172.7.236/32",
          "146.192.38.32/29",
          "146.192.43.248/29",
          "146.192.219.96/27",
          "147.29.36.0/24",
          "147.29.38.23/32",
          "147.29.140.132/32",
          "147.29.140.133/32",
          "147.29.140.134/32",
          "147.29.140.135/32",
          "148.122.143.64/27",
          "148.122.165.66/32",
          "148.122.166.192/28",
          "148.122.166.208/28",
          "148.122.166.224/28",
          "148.122.211.130/32",
          "148.122.226.8/30",
          "148.122.226.12/30",
          "148.122.226.20/30",
          "148.122.226.28/30",
          "152.95.192.0/19",
          "152.95.225.32/29",
          "152.95.225.64/29",
          "152.177.151.188/30",
          "153.110.63.0/25",
          "153.110.197.0/25",
          "153.110.198.128/26",
          "153.110.224.160/28",
          "155.61.0.0/16",
          "155.195.0.0/16",
          "160.43.93.39/32",
          "160.43.94.158/32",
          "160.43.94.174/32",
          "160.43.166.170/32",
          "160.43.172.0/25",
          "185.35.212.64/28",
          "185.35.212.110/32",
          "193.88.156.0/23",
          "193.161.30.184/30",
          "193.214.20.167/32",
          "194.125.246.0/23",
          "194.213.168.166/32",
          "195.204.62.0/24",
          "195.254.173.168/29",
          "199.105.176.0/21",
          "199.105.184.0/23",
          "208.134.161.0/24",
          "217.65.224.212/32"
        ],
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "*",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "Deny all outbound traffic to public IP adresses routed over internal networks",
        "protocol": "*",
        "direction": "Outbound",
        "priority": 4094,
        "access": "Deny"
      },
      "name": "deny-outbound-internal-public-addresses",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "id": "/subscriptions/0/resourceGroups/lz-network-norwayeast/providers/Microsoft.Network/networkSecurityGroups/lz-network-norwayeast-vnet-adds-test-nsg/securityRules/deny-outbound-internal-public-addresses",
      "etag": "W/\"9aa530a0-1e8d-4383-a34b-128efa65af41\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "Internet",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "*",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "Allow outbound internet traffic",
        "protocol": "*",
        "direction": "Outbound",
        "priority": 4095,
        "access": "Allow"
      },
      "name": "allow-outbound-internet",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "id": "/subscriptions/0/resourceGroups/lz-network-norwayeast/providers/Microsoft.Network/networkSecurityGroups/lz-network-norwayeast-vnet-adds-test-nsg/securityRules/allow-outbound-internet",
      "etag": "W/\"9aa530a0-1e8d-4383-a34b-128efa65af41\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "*",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "*",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "Deny all outbound traffic",
        "protocol": "*",
        "direction": "Outbound",
        "priority": 4096,
        "access": "Deny"
      },
      "name": "deny-outbound-all",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "id": "/subscriptions/0/resourceGroups/lz-network-norwayeast/providers/Microsoft.Network/networkSecurityGroups/lz-network-norwayeast-vnet-adds-test-nsg/securityRules/deny-outbound-all",
      "etag": "W/\"9aa530a0-1e8d-4383-a34b-128efa65af41\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "*",
        "destinationPortRanges": [
          "135",
          "136",
          "137",
          "138",
          "139",
          "443",
          "45152-65535"
        ],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "172.20.170.230/32",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "Allow inbound tcp from onprem Orion",
        "protocol": "tcp",
        "direction": "Inbound",
        "priority": 4030,
        "access": "Allow"
      },
      "name": "allow-inbound-tcp-orion",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "id": "/subscriptions/0/resourceGroups/lz-network-norwayeast/providers/Microsoft.Network/networkSecurityGroups/lz-network-norwayeast-vnet-adds-test-nsg/securityRules/allow-inbound-tcp-orion",
      "etag": "W/\"9aa530a0-1e8d-4383-a34b-128efa65af41\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "*",
        "destinationPortRanges": [
          "161"
        ],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "172.20.170.230/32",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "Allow inbound udp from onprem Orion",
        "protocol": "udp",
        "direction": "Inbound",
        "priority": 4031,
        "access": "Allow"
      },
      "name": "allow-inbound-udp-orion",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "id": "/subscriptions/0/resourceGroups/lz-network-norwayeast/providers/Microsoft.Network/networkSecurityGroups/lz-network-norwayeast-vnet-adds-test-nsg/securityRules/allow-inbound-udp-orion",
      "etag": "W/\"9aa530a0-1e8d-4383-a34b-128efa65af41\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "*",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "172.20.170.230/32",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "Allow inbound icmp from onprem Orion",
        "protocol": "ICMP",
        "direction": "Inbound",
        "priority": 4032,
        "access": "Allow"
      },
      "name": "allow-inbound-icmp-orion",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "id": "/subscriptions/0/resourceGroups/lz-network-norwayeast/providers/Microsoft.Network/networkSecurityGroups/lz-network-norwayeast-vnet-adds-test-nsg/securityRules/allow-inbound-icmp-orion",
      "etag": "W/\"9aa530a0-1e8d-4383-a34b-128efa65af41\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "*",
        "destinationPortRanges": [
          "135",
          "161",
          "1024-65535"
        ],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "172.25.51.89/32",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "Allow inbound tcp from onprem CMDB",
        "protocol": "tcp",
        "direction": "Inbound",
        "priority": 4033,
        "access": "Allow"
      },
      "name": "allow-inbound-tcp-cmdb",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "id": "/subscriptions/0/resourceGroups/lz-network-norwayeast/providers/Microsoft.Network/networkSecurityGroups/lz-network-norwayeast-vnet-adds-test-nsg/securityRules/allow-inbound-tcp-cmdb",
      "etag": "W/\"9aa530a0-1e8d-4383-a34b-128efa65af41\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "*",
        "destinationPortRanges": [
          "88"
        ],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "172.25.50.3/32",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "Allow inbound udp from onprem Qualys",
        "protocol": "udp",
        "direction": "Inbound",
        "priority": 4034,
        "access": "Allow"
      },
      "name": "allow-inbound-udp-qualys",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "id": "/subscriptions/0/resourceGroups/lz-network-norwayeast/providers/Microsoft.Network/networkSecurityGroups/lz-network-norwayeast-vnet-adds-test-nsg/securityRules/allow-inbound-udp-qualys",
      "etag": "W/\"9aa530a0-1e8d-4383-a34b-128efa65af41\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "172.25.51.40/32",
        "destinationPortRanges": [
          "8080"
        ],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "Allow outbound tcp to onprem SNOW",
        "protocol": "tcp",
        "direction": "Outbound",
        "priority": 4030,
        "access": "Allow"
      },
      "name": "allow-outbound-tcp-snow",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "id": "/subscriptions/0/resourceGroups/lz-network-norwayeast/providers/Microsoft.Network/networkSecurityGroups/lz-network-norwayeast-vnet-adds-test-nsg/securityRules/allow-outbound-tcp-snow",
      "etag": "W/\"9aa530a0-1e8d-4383-a34b-128efa65af41\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [
          "172.25.61.37/32",
          "172.25.61.38/32",
          "172.25.61.39/32"
        ],
        "destinationPortRanges": [
          "8089",
          "9997"
        ],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "Allow outbound tcp to onprem Splunk",
        "protocol": "tcp",
        "direction": "Outbound",
        "priority": 4031,
        "access": "Allow"
      },
      "name": "allow-outbound-tcp-splunk",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "id": "/subscriptions/0/resourceGroups/lz-network-norwayeast/providers/Microsoft.Network/networkSecurityGroups/lz-network-norwayeast-vnet-adds-test-nsg/securityRules/allow-outbound-tcp-splunk",
      "etag": "W/\"9aa530a0-1e8d-4383-a34b-128efa65af41\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [
          "10.0.0.32/28"
        ],
        "destinationPortRanges": [
          "53",
          "88",
          "123",
          "135",
          "139",
          "389",
          "443",
          "445",
          "464",
          "636",
          "1025",
          "1026",
          "3268",
          "3269",
          "3275",
          "5722",
          "49152-65535"
        ],
        "sourceAddressPrefixes": [
          "10.0.0.32/28"
        ],
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "allow inbound tcp from kl dc to adds subnet",
        "protocol": "tcp",
        "direction": "Inbound",
        "priority": 100,
        "access": "Allow"
      },
      "name": "allow-inbound-tcp-dc-adds",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "id": "/subscriptions/0/resourceGroups/lz-network-norwayeast/providers/Microsoft.Network/networkSecurityGroups/lz-network-norwayeast-vnet-adds-test-nsg/securityRules/allow-inbound-tcp-dc-adds",
      "etag": "W/\"9aa530a0-1e8d-4383-a34b-128efa65af41\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [
          "10.0.0.32/28"
        ],
        "destinationPortRanges": [
          "53",
          "88",
          "123",
          "135",
          "137",
          "138",
          "389",
          "464"
        ],
        "sourceAddressPrefixes": [
          "10.0.0.32/28"
        ],
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "allow inbound udp from kl dc to adds subnet",
        "protocol": "udp",
        "direction": "Inbound",
        "priority": 200,
        "access": "Allow"
      },
      "name": "allow-inbound-udp-dc-adds",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "id": "/subscriptions/0/resourceGroups/lz-network-norwayeast/providers/Microsoft.Network/networkSecurityGroups/lz-network-norwayeast-vnet-adds-test-nsg/securityRules/allow-inbound-udp-dc-adds",
      "etag": "W/\"9aa530a0-1e8d-4383-a34b-128efa65af41\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [
          "10.0.0.32/28"
        ],
        "destinationPortRanges": [
          "53",
          "88",
          "123",
          "135",
          "139",
          "389",
          "443",
          "445",
          "464",
          "636",
          "1025",
          "1026",
          "3268",
          "3269",
          "3275",
          "5722",
          "49152-65535"
        ],
        "sourceAddressPrefixes": [
          "10.0.0.32/28"
        ],
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "allow outbound tcp from adds subnet to kl dc",
        "protocol": "tcp",
        "direction": "Outbound",
        "priority": 100,
        "access": "Allow"
      },
      "name": "allow-outbound-tcp-dc-adds",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "id": "/subscriptions/0/resourceGroups/lz-network-norwayeast/providers/Microsoft.Network/networkSecurityGroups/lz-network-norwayeast-vnet-adds-test-nsg/securityRules/allow-outbound-tcp-dc-adds",
      "etag": "W/\"9aa530a0-1e8d-4383-a34b-128efa65af41\""
    },
    {
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [
          "10.0.0.32/28"
        ],
        "destinationPortRanges": [
          "53",
          "88",
          "123",
          "135",
          "137",
          "138",
          "389",
          "464"
        ],
        "sourceAddressPrefixes": [
          "10.0.0.32/28"
        ],
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "allow outbound udp from adds subnet",
        "protocol": "udp",
        "direction": "Outbound",
        "priority": 200,
        "access": "Allow"
      },
      "name": "allow-outbound-udp-dc-adds",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "id": "/subscriptions/0/resourceGroups/lz-network-norwayeast/providers/Microsoft.Network/networkSecurityGroups/lz-network-norwayeast-vnet-adds-test-nsg/securityRules/allow-outbound-udp-dc-adds",
      "etag": "W/\"9aa530a0-1e8d-4383-a34b-128efa65af41\""
    }
  ],
  "subnets": [
    {
      "id": "/subscriptions/0/resourceGroups/lz-network-norwayeast/providers/Microsoft.Network/virtualNetworks/lz-network-norwayeast-vnet/subnets/adds-test"
    }
  ],
  "flowLogs": [
    {
      "id": "/subscriptions/0/resourceGroups/NetworkWatcherRG/providers/Microsoft.Network/networkWatchers/NetworkWatcher_norwayeast/flowLogs/lz-network-norwayeast-vnet-adds-test-nsg-flowlog"
    }
  ]
}
